Fix spacing

--- a/client/web/src/enterprise/batches/execution/WorkspaceDetails.module.scss
+++ b/client/web/src/enterprise/batches/execution/WorkspaceDetails.module.scss
@@ -1,8 +1,17 @@
 .workspace-detail {
-    color: var(--text-muted);
     padding: 0 0.375rem;
+    margin: 0;
+    line-height: 1.5rem;
 
-    &:not(:last-of-type) {
+    &:not(button) {
+        color: var(--text-muted);
+    }
+
+    &:first-child {
+        padding-left: 0;
+    }
+
+    &:not(:last-child) {
         border-right: 1px solid var(--border-color);
     }
 }
